test_data/end_to_end/err__assign_mismatching_types/stderr.txt
error: mismatching types: expected `i32`, found `u8`
  --> main.cz:3:9
3 |     x = 42u8;
            ~~~~
